--- a/calculator.html
+++ b/calculator.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
   <title>Calculator</title>
   <meta charset="utf-8">
   <script type="text/javascript">
-function cube() {
- 1
-var num = document.getElementById("n1");
-num.value = Math.pow(num.value, 3); }
-</script>
+    function cube() {
+    var num = document.getElementById("n1");
+    num.value = Math.pow(num.value, 3); }
+    function cuatro() {
+    var num = document.getElementById("n1");
+    num.value = Math.pow(num.value, 4); }
+  </script>
 </head>
+
 <body>
   <h1>Calculadora de Daniel Albares Martin </h1>
-Number:
-<input type="text" id="n1">
-<button onclick="cube()"> x^3 </button> </body>
+  Number:
+  <input type="text" id="n1">
+  <button onclick="cube()"> x^3 </button>
+  <button onclick="cuatro()"> x^4 </button>
+</body>
 </html>
